--- a/nacos-micro-service/service-3/service-3-server/src/main/resources/templates/json/myJson.html
+++ b/nacos-micro-service/service-3/service-3-server/src/main/resources/templates/json/myJson.html
@@ -7,17 +7,30 @@
 </head>
 <body>
 
-<input type="button" id="btn" value="提交">
+<input type="button" id="btn" value="提交RequestBody满参 Object">
+<input type="button" id="btn1" value="提交RequestBody非满参 Object">
+<input type="button" id="btn2" value="提交 RequestParam">
+<input type="button" id="btn3" value="提交RequestBody满参&非满参 List">
+
+<form action="json/getFormData" method="post" >
+    <input type="text" name="id" value="1"/>
+    <input type="text" name="name" value="法外狂徒"/>
+    <input type="text" name="createDate" value="2022-11-11 11:11:11"/>
+    <input type="submit" value="提交">
+</form>
 
 </body>
 </html>
 
 <script>
     $(function () {
-        methodTwo();
+        methodPost();
+        methodGet();
+        f3();
+        f4();
     });
-
-    function methodTwo() {
+//结论requestBody
+    function methodPost() {
         $("#btn").click(function () {
             $.ajax({
                 url: 'json/show',
@@ -26,7 +39,62 @@
                 contentType: 'application/json;charset=UTF-8', //请求数据类型
                 dataType:'json',  //返回数据类型 如果后端返回一个消息对象 这里为json
                 success:function (data) {
-                    alert(data);
+                    alert(data.A01.id);
+                    alert(JSON.stringify(data));
+                }
+            })
+
+        })
+
+
+    }
+
+    function methodGet() {
+        $('#btn1').click(function () {
+            $.ajax({
+                url: 'json/display',
+                type: 'post',
+                data: JSON.stringify({"id":12 ,"name":"张三"}),
+                contentType: 'application/json;charset=UTF-8', //请求数据类型
+                dataType:'json',  //返回数据类型 如果后端返回一个消息对象 这里为json
+                success:function (data) {
+                alert(data)
+                }
+            })
+        })
+    }
+
+    function f3() {
+        var d = {"id":12 ,"name":"张三"};
+        $('#btn2').click(function () {
+            $.ajax({
+                url: 'json/getData',
+                type: 'post',
+                data: d,
+                // contentType: 'application/json;charset=UTF-8', //请求数据类型
+                dataType:'json',  //返回数据类型 如果后端返回一个消息对象 这里为json
+                success:function (data) {
+
+                }
+            })
+        })
+    }
+
+
+    function f4() {
+        var arr = [{"id":13 ,"name":"张三1","createDate":"2022-11-11 11:11:11"},
+            {"id":14 ,"name":"张三2"},
+            {"id":15 ,"name":"张三3","createDate":""}
+        ]
+        $('#btn3').click(function () {
+            $.ajax({
+                url: 'json/getListData',
+                type: 'post',
+                data: JSON.stringify(arr),
+                contentType: 'application/json;charset=UTF-8', //请求数据类型
+                dataType:'json',  //返回数据类型 如果后端返回一个消息对象 这里为json
+                success:function (data) {
+                 alert(data.staffs)
                 }
             })
         })
