--- a/nacos-sentinel-service/user-service/user-server/src/main/resources/templates/views/goods/cart.html
+++ b/nacos-sentinel-service/user-service/user-server/src/main/resources/templates/views/goods/cart.html
@@ -3,7 +3,7 @@
        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>购物车</title>
-    <link href="/user-service/js/message/css/style.css" rel='stylesheet' type='text/css' />
+    <link href="/js/message/css/style.css" rel='stylesheet' type='text/css' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8   " />
     <meta charset="UTF-8">
 </head>
