--- a/nacos-sentinel-service/user-service/user-server/src/main/resources/templates/views/index.html
+++ b/nacos-sentinel-service/user-service/user-server/src/main/resources/templates/views/index.html
@@ -3,7 +3,7 @@
        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title></title>
-    <link href="js/message/css/style.css" rel='stylesheet' type='text/css' />
+    <link th:href="@{/js/message/css/style.css}" rel='stylesheet' type='text/css' />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8   " />
 
  <style type="text/css">
@@ -23,10 +23,10 @@
     <body>
        <h1 style="color: yellow;">index</h1>
 
-       <a id="login" class="hvr-fade button" href="toLogin" sec:authorize="isAnonymous()">登录</a>
+       <a id="login" class="hvr-fade button" th:href="@{/toLogin}" sec:authorize="isAnonymous()">登录</a>
        <a id="user" class="hvr-fade button" href="#" sec:authorize="!isAnonymous()" sec:authentication="name">用户名</a>
        <a id="authorities" class="hvr-fade button" href="#" sec:authorize="!isAnonymous()" sec:authentication="principal.authorities">用户名</a>
-       <a id="logout" class="hvr-fade button" href="logout" sec:authorize="!isAnonymous()">注销</a>
+       <a id="logout" class="hvr-fade button" th:href="@{/logout}" sec:authorize="!isAnonymous()">注销</a>
          <div style="margin-left: 30%;">
              <ul class="bt-list">
                  <li sec:authorize="hasAnyAuthority('goods')">
