--- a/nacos-sentinel-service/user-service/user-server/src/main/resources/templates/views/login.html
+++ b/nacos-sentinel-service/user-service/user-server/src/main/resources/templates/views/login.html
@@ -4,25 +4,25 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<title>登录/注册</title>
-		<link href="js/message/img/bear.ico" rel="icon" />
+		<link href="/js/message/img/bear.ico" rel="icon" />
 		<meta name="keywords" content="">
 		<meta name="description" content="">
 
-		<link rel="stylesheet" href="js/fy-alert/css/alert.css"/>
-		<link rel="stylesheet" href="js/fy-alert/css/fy-alert.css"/>
-		<script src="js/fy-alert/js/fy-alert.js"></script>
+		<link rel="stylesheet" href="/js/fy-alert/css/alert.css"/>
+		<link rel="stylesheet" href="/js/fy-alert/css/fy-alert.css"/>
+		<script src="/js/fy-alert/js/fy-alert.js"></script>
 
-		<script src="js/message/js/rem.js"></script>
-		<script src="js/message/js/jquery.min.js" type="text/javascript"></script>
-		<link rel="stylesheet" type="text/css" href="js/message/css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="js/message/css/base.css" />
-		<link rel="stylesheet" type="text/css" href="js/message/css/page.css" />
-		<link rel="stylesheet" type="text/css" href="js/message/css/all.css" />
-		<link rel="stylesheet" type="text/css" href="js/message/css/mui.min.css" />
-		<link rel="stylesheet" type="text/css" href="js/message/css/loaders.min.css" />
+		<script src="/js/message/js/rem.js"></script>
+		<script src="/js/message/js/jquery.min.js" type="text/javascript"></script>
+		<link rel="stylesheet" type="text/css" href="/js/message/css/bootstrap.min.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/css/base.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/css/page.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/css/all.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/css/mui.min.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/css/loaders.min.css" />
 		<!-- <link rel="stylesheet" type="text/css" href="css/loading.css"/> -->
-		<link rel="stylesheet" type="text/css" href="js/message/slick/slick.css" />
-		<link rel="stylesheet" type="text/css" href="js/message/iconfont/iconfont.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/slick/slick.css" />
+		<link rel="stylesheet" type="text/css" href="/js/message/iconfont/iconfont.css" />
 
 
 
@@ -40,9 +40,9 @@
 
 		<div class="warp clearfloat" style="margin: 0;">
 			<div class="login-top clearfloat box-s">
-				<div class="ge-back"><img src="js/message/img/login.png"></div>
+				<div class="ge-back"><img src="/js/message/img/login.png"></div>
 				<div class="logo-imgs">
-					<img src="js/message/img/bear.jpg">
+					<img src="/js/message/img/bear.jpg">
 				</div>
 			</div>
 		</div>
@@ -55,7 +55,7 @@
 			</ul>
 			<div id="myTabContent" class="tab-content" style="background: #fff; padding: 0.4rem;">
 				<div class="tab-pane fade in active" id="xinxi">
-					<form role="form" action="register" method="post">
+					<form role="form" action="/register" method="post">
 						<div class="form-group login-group_re">
 							<i class="iconfont icon-shoujihaoma"></i>
 							<input type="text" class="form-control inpt-form" id="phone" name="phone" placeholder="请输入手机号">
@@ -85,7 +85,7 @@
 
 				</div>
 				<div class="tab-pane fade" id="mima">
-					<form role="form" action="login?target=/index"  method="post">
+					<form role="form" action="/login?target=/index"  method="post">
 						<div class="form-group login-group_re">
 							<i class="iconfont icon-shoujihaoma"></i>
 							<input type="text" class="form-control inpt-form"  name="username" placeholder="请输入手机号">
@@ -120,15 +120,15 @@
 			</div>
 		</div>
 
-		<script type="text/javascript" src="js/message/js/jquery.min.js"></script>
-		<script type="text/javascript" src="js/message/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="/js/message/js/jquery.min.js"></script>
+		<script type="text/javascript" src="/js/message/js/bootstrap.min.js"></script>
 		<!-- 密码显示隐藏 -->
-		<script src="js/message/js/bootstrap-show-password.js"></script>
+		<script src="/js/message/js/bootstrap-show-password.js"></script>
 
-		<script type="text/javascript" src="js/message/js/mui.min.js"></script>
-		<script type="text/javascript" src="js/message/js/hmt.js"></script>
-		<script type="text/javascript" src="js/message/slick/slick.js"></script>
-		<script type="text/javascript" src="js/message/js/swiper.min.js"></script>
+		<script type="text/javascript" src="/js/message/js/mui.min.js"></script>
+		<script type="text/javascript" src="/js/message/js/hmt.js"></script>
+		<script type="text/javascript" src="/js/message/slick/slick.js"></script>
+		<script type="text/javascript" src="/js/message/js/swiper.min.js"></script>
 	</body>
 
 </html>
